--- a/static/monitor_specific.css
+++ b/static/monitor_specific.css
@@ -1,71 +1,77 @@
-/* static/styles/monitor_specific.css */
-
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  background-image: url("./images/1619054.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 .container {
-    max-width: 1200px;
-    margin: auto;
+  max-width: 1200px;
+  margin: auto;
 }
 
 .monitor-page {
-    background-color: #f8f8f8;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 20px;
+  padding: 20px;
+  border-radius: 28px !important;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 100px;
+  margin-bottom: 50px;
 }
 
 h1 {
-    color: #333;
+  color: white;
 }
 
 h2 {
-    color: #555;
+  color: white;
 }
 
 .monitor-status {
-    font-weight: bold;
+  font-weight: bold;
+  font-size: 13px !important;
+  margin: 10px !important;
 }
 
 .monitor-changes {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
 }
 
-th, td {
-    border: 1px solid #ddd;
-    padding: 10px;
-    text-align: left;
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 10px;
+  text-align: left;
 }
 
-th {
-    background-color: #f2f2f2;
+th,
+tr {
+  color: white;
 }
 
 .change-type-added {
-    color: green;
+  color: green;
 }
 
 .change-type-removed {
-    color: red;
+  color: red;
 }
 
 .change-type-modified {
-    color: blue;
+  color: blue;
 }
 
 .screenshot {
-    margin-top: 20px;
-    border: 1px solid #ddd;
-    padding: 10px;
+  margin-top: 20px;
+  border: 1px solid #ddd;
+  padding: 10px;
 }
